test/tests/errors/error-array-bounds-not-int2.sm
// true
// false
/**/
/**/

program {
    array x[1:1.0];
}